# 2013-06-26 (day)
- Added "paypal" field in Event's db table and form
- Prepared DB schema to cope with Eventbrite's access_codes
- Added some JavaScript includes

- Organisers will now be synced independently from Events (if needed)
- Both free and paid Tickets will now be created for the one event only;
  additionally the free Tickets will be hidden with ticket_update method
- Payment information will be saved on Events; it's defaults are set to
  PayPal and hardcoded inside the Event model class
- Access codes will be now generated for TOA attendees, sent to Eventbrite,
  attached to events and displayed with the ticket widgets on single Event
  page



# 2013-06-25 (night)
- Added counter on tickets in the form
- Small cleanup of useless models
- Added hardcoded method for ticket places calculation (TODO! Fix this ASAP as
  this may lead to fails)
- Fixed a bug causing logo errors on events imported from Eventbrite
- Moved ticket quantity calculating (declared/free/paid) to Ticket model. It
  will allow to declare this only for the first time (when creating new
  ticket) and it will totally block it later on (this is to be
  reconsidered/tweaked when there's more time)
- Added "eventbrite_hidden_id" fields for Ticket and Event
- The synchronization process will now create two separate Events; one
  private (for free tickets), another one public (for paid tickets)
- Tickets will be pushed to Eventbrite together with the events; also one
  hidden and one public



# 2013-06-24 (night)
- Added "synchronized" flag for the Organiser object; the flag is auto unset
  on every manual organiser saving and will be set on Eventbrite
  synchronization process
- Added background event synchronization task, that will synchronize
  Organisers, Venues, Events and Tickets (last one still on TODO list)
  The task (for now) can be executed manually by calling: 
  ./symfony toa:pushEventbrite



# 2013-06-23 (day)