@@ -1,6 +1,16 @@
 # SATELLITES module
+# TODO: DRY it one day
 indexSuccess:
   javascripts: ['controllers/e_satellites_index.js']
 
 hostSuccess:
-  javascripts: ['libs/colorpicker.js', 'controllers/e_satellites_host.js']
+  javascripts: ['http://maps.google.com/maps/api/js?libraries=places&sensor=false', 'libs/colorpicker.js', 'libs/formmap.js', 'controllers/e_satellites_host_edit.js']
+
+editSuccess:
+  javascripts: ['http://maps.google.com/maps/api/js?libraries=places&sensor=false', 'libs/colorpicker.js', 'libs/formmap.js', 'controllers/e_satellites_host_edit.js']
+  
+createSuccess:
+  javascripts: ['http://maps.google.com/maps/api/js?libraries=places&sensor=false', 'libs/colorpicker.js', 'libs/formmap.js', 'controllers/e_satellites_host_edit.js']
+
+updateSuccess:
+  javascripts: ['http://maps.google.com/maps/api/js?libraries=places&sensor=false', 'libs/colorpicker.js', 'libs/formmap.js', 'controllers/e_satellites_host_edit.js']
