@@ -1,6 +1,0 @@
-// # SATELLITES/HOST screen controller
-document.observe("dom:loaded", function() {
-
-	// TODO: Place your runtime code here
-
-});
